--- a/gallery.html
+++ b/gallery.html
@@ -55,46 +55,52 @@
             this.id = data.id;
             this.img = new Image();
             this.img.src = data.image;
-            this.reset();
-            this.nextMoveTime = Date.now() + Math.random() * 5000 + 3000; // 3~8秒后第一次动
+            this.x = 0;
+            this.y = 0;
+            this.size = 40 + Math.random() * 40;
+            this.angle = 0; // 固定朝前，不转圈
+            this.targetX = 0;
+            this.targetY = 0;
+            this.moving = false;
+            this.nextMoveTime = Date.now() + Math.random() * 8000 + 5000; // 5~13秒动一次
+            this.resetPosition();
         }
-        reset() {
+
+        resetPosition() {
             this.x = Math.random() * (width - 100) + 50;
             this.y = Math.random() * (height - 100) + 50;
             this.targetX = this.x;
             this.targetY = this.y;
-            this.size = 40 + Math.random() * 40;
-            this.angle = Math.random() * Math.PI * 2;
-            this.moving = false;
         }
+
         update() {
-            // 偶尔决定移动一小步
+            // 每隔一段时间，轻轻晃动一下
             if (!this.moving && Date.now() > this.nextMoveTime) {
-                this.targetX = this.x + (Math.random() - 0.5) * 30; // 左右晃 ±15px
-                this.targetY = this.y + (Math.random() - 0.5) * 30;
+                this.targetX = this.x + (Math.random() - 0.5) * 20; // 左右晃 ±10px
+                this.targetY = this.y + (Math.random() - 0.5) * 20;
                 this.moving = true;
-                this.nextMoveTime = Date.now() + Math.random() * 5000 + 3000;
+                this.nextMoveTime = Date.now() + Math.random() * 8000 + 5000;
             }
 
-            // 缓慢移动到目标点
+            // 缓慢移动到目标点（超慢）
             if (this.moving) {
                 const dx = this.targetX - this.x;
                 const dy = this.targetY - this.y;
                 const dist = Math.sqrt(dx*dx + dy*dy);
-                if (dist > 1) {
-                    this.x += dx * 0.05; // 缓慢移动
-                    this.y += dy * 0.05;
-                    this.angle += 0.03; // 轻轻旋转
+                if (dist > 0.5) {
+                    this.x += dx * 0.02; // 极慢移动
+                    this.y += dy * 0.02;
+                    // 轻轻摇摆身体（不转圈）
+                    this.angle = Math.sin(Date.now() * 0.001) * 0.1; // ±5.7° 轻微摇
                 } else {
                     this.moving = false;
-                    this.x = this.targetX;
-                    this.y = this.targetY;
                 }
             } else {
-                // 站立时轻轻晃动
-                this.angle += 0.01;
+                // 站立时，极轻微呼吸式摇摆
+                this.angle = Math.sin(Date.now() * 0.0008) * 0.05; // ±2.8° 像呼吸
             }
         }
+
         draw() {
             ctx.save();
             ctx.translate(this.x, this.y);
@@ -105,6 +111,8 @@
     }
 
     const people = [];
+
+    // 加载新小人
     peopleRef.on('child_added', snapshot => {
         const data = snapshot.val();
         const person = new Person(data);
@@ -112,13 +120,26 @@
         document.getElementById('count').textContent = people.length;
     });
 
+    // 动画循环
     function animate() {
-        ctx.fillStyle = 'rgba(135,206,235,0.08)';
+        // 轻微拖尾背景（治愈感）
+        ctx.fillStyle = 'rgba(135,206,235,0.05)';
         ctx.fillRect(0,0,width,height);
-        people.forEach(p => { p.update(); p.draw(); });
+
+        people.forEach(p => {
+            p.update();
+            p.draw();
+        });
+
         requestAnimationFrame(animate);
     }
     animate();
+
+    // 窗口大小变化时重新定位
+    window.addEventListener('resize', () => {
+        resize();
+        people.forEach(p => p.resetPosition());
+    });
 </script>
 </body>
 </html>
