Refactor gallery.html for improved visuals and animations
Updated the HTML structure and JavaScript logic for the drawing application, enhancing the visual elements and animation effects.

--- a/gallery.html
+++ b/gallery.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>全球小人广场 | Draw a Person</title>
     <style>
-        body { margin:0; overflow:hidden; background: #87CEEB; font-family: sans-serif; }
+        body { margin:0; overflow:hidden; background: #87CEEB; font-family: sans-sans-serif; }
         canvas { display:block; image-rendering: pixelated; }
         #info {
             position: absolute; top: 20px; left: 20px; color: white;
@@ -57,11 +57,9 @@
     resize();
     window.addEventListener('resize', resize);
 
-    // 樱花类（保持不变，无痕）
+    // 樱花（保持原大小，对比更萌）
     class Sakura {
-        constructor() {
-            this.reset();
-        }
+        constructor() { this.reset(); }
         reset() {
             this.x = Math.random() * width;
             this.y = -30;
@@ -101,74 +99,71 @@
             ctx.restore();
         }
     }
-
     const sakuras = Array.from({length: 15}, () => new Sakura());
 
-    // 升级版小人类（加挥手 + 走路动画）
+    // 小人类（放大 3 倍！）
     class Person {
         constructor(data) {
             this.id = data.id;
             this.img = new Image();
             this.img.src = data.image;
-            this.x = 0; this.y = 0; this.size = 40 + Math.random() * 40;
+            this.x = 0; this.y = 0; 
+            this.size = 120 + Math.random() * 120; // 放大3倍：120~240
             this.angle = 0; this.targetX = 0; this.targetY = 0;
             this.moving = false; 
-            this.nextMoveTime = Date.now() + Math.random() * 8000 + 5000; // 走路间隔
+            this.nextMoveTime = Date.now() + Math.random() * 8000 + 5000;
             this.waving = false;
-            this.nextWaveTime = Date.now() + Math.random() * 10000 + 10000; // 挥手间隔 10~20s
-            this.armAngle = 0; // 手臂角度
-            this.legAngle1 = 0; // 左腿
-            this.legAngle2 = 0; // 右腿
-            this.walkCycle = 0; // 走路周期
+            this.nextWaveTime = Date.now() + Math.random() * 10000 + 10000;
+            this.armAngle = 0;
+            this.legAngle1 = 0; this.legAngle2 = 0;
+            this.walkCycle = 0;
             this.resetPosition();
         }
         resetPosition() {
-            this.x = Math.random() * (width - 100) + 50;
-            this.y = Math.random() * (height - 100) + 50;
+            // 留出大空间，避免被切掉
+            this.x = Math.random() * (width - 300) + 150;
+            this.y = Math.random() * (height - 300) + 150;
             this.targetX = this.x; this.targetY = this.y;
         }
         update() {
             const now = Date.now();
 
-            // 挥手动画
+            // 挥手
             if (!this.waving && now > this.nextWaveTime) {
                 this.waving = true;
-                this.nextWaveTime = now + Math.random() * 10000 + 20000; // 下次挥手 20~30s
-                setTimeout(() => { this.waving = false; }, 3000); // 挥手持续3秒
+                this.nextWaveTime = now + Math.random() * 10000 + 20000;
+                setTimeout(() => { this.waving = false; }, 3000);
             }
             if (this.waving) {
-                this.armAngle = Math.sin(now * 0.01) * 0.8; // 快速摆动手臂 (±45°)
+                this.armAngle = Math.sin(now * 0.01) * 0.8;
             } else {
                 this.armAngle = 0;
             }
 
-            // 走路动画
+            // 走路（范围也放大）
             if (!this.moving && now > this.nextMoveTime) {
-                this.targetX = this.x + (Math.random() - 0.5) * 50; // 走更远点
-                this.targetY = this.y + (Math.random() - 0.5) * 20;
+                this.targetX = this.x + (Math.random() - 0.5) * 120; // 走更远
+                this.targetY = this.y + (Math.random() - 0.5) * 60;
                 this.moving = true;
-                this.nextMoveTime = now + Math.random() * 15000 + 15000; // 走路间隔 15~30s
+                this.nextMoveTime = now + Math.random() * 15000 + 15000;
             }
             if (this.moving) {
                 const dx = this.targetX - this.x;
                 const dy = this.targetY - this.y;
                 const dist = Math.sqrt(dx*dx + dy*dy);
                 if (dist > 0.5) {
-                    this.x += dx * 0.03; // 走路速度稍快
+                    this.x += dx * 0.03;
                     this.y += dy * 0.03;
-                    this.walkCycle += 0.2; // 迈步周期
-                    this.legAngle1 = Math.sin(this.walkCycle) * 0.5; // 左腿摆动
-                    this.legAngle2 = Math.sin(this.walkCycle + Math.PI) * 0.5; // 右腿反向
+                    this.walkCycle += 0.2;
+                    this.legAngle1 = Math.sin(this.walkCycle) * 0.5;
+                    this.legAngle2 = Math.sin(this.walkCycle + Math.PI) * 0.5;
                 } else {
                     this.moving = false;
-                    this.legAngle1 = 0;
-                    this.legAngle2 = 0;
+                    this.legAngle1 = 0; this.legAngle2 = 0;
                 }
             } else {
-                this.legAngle1 = 0;
-                this.legAngle2 = 0;
+                this.legAngle1 = 0; this.legAngle2 = 0;
                 this.walkCycle = 0;
-                // 站立轻晃
                 this.angle = Math.sin(now * 0.0008) * 0.05;
             }
         }
@@ -177,25 +172,34 @@
             ctx.translate(this.x, this.y);
             ctx.rotate(this.angle);
 
-            // 由于用户画的是自定义图像，我们用图像作为主体，但叠加简单肢体动画提示
-            // （如果想更精确，可以在上传时提取肢体，但这里简化：用图像 + 手臂/腿部线条叠加）
+            // 挥手手臂（在图像下面，放大）
+            if (this.waving) {
+                ctx.strokeStyle = '#000';
+                ctx.lineWidth = 5; // 更粗
+                ctx.lineCap = 'round';
+                ctx.beginPath();
+                ctx.moveTo(this.size * 0.2, -this.size * 0.3);
+                const armX = this.size * 0.4 + Math.cos(this.armAngle) * this.size * 0.3;
+                const armY = -this.size * 0.3 + Math.sin(this.armAngle) * this.size * 0.3;
+                ctx.lineTo(armX, armY);
+                ctx.stroke();
+            }
+
+            // 用户图像（放大）
             ctx.drawImage(this.img, -this.size/2, -this.size/2, this.size, this.size);
 
-            // 叠加挥手动臂（简单线条，位置基于图像中心）
-            ctx.strokeStyle = '#000';
-            ctx.lineWidth = 3;
-            ctx.beginPath();
-            ctx.moveTo(0, -this.size/4); // 肩部
-            ctx.lineTo(this.size/4 * Math.cos(this.armAngle), this.size/4 * Math.sin(this.armAngle)); // 手臂末端
-            ctx.stroke();
-
-            // 叠加走路腿部（如果走路中）
+            // 走路腿部（放大）
             if (this.moving) {
+                ctx.strokeStyle = '#000';
+                ctx.lineWidth = 5;
+                ctx.lineCap = 'round';
                 ctx.beginPath();
-                ctx.moveTo(0, this.size/4); // 髋部
-                ctx.lineTo(-this.size/6 * Math.cos(this.legAngle1), this.size/3 + this.size/6 * Math.sin(this.legAngle1)); // 左腿
-                ctx.moveTo(0, this.size/4);
-                ctx.lineTo(this.size/6 * Math.cos(this.legAngle2), this.size/3 + this.size/6 * Math.sin(this.legAngle2)); // 右腿
+                ctx.moveTo(-this.size * 0.1, this.size * 0.3);
+                ctx.lineTo(-this.size * 0.15 + Math.cos(this.legAngle1) * this.size * 0.2, 
+                           this.size * 0.5 + Math.sin(this.legAngle1) * this.size * 0.2);
+                ctx.moveTo(this.size * 0.1, this.size * 0.3);
+                ctx.lineTo(this.size * 0.15 + Math.cos(this.legAngle2) * this.size * 0.2, 
+                           this.size * 0.5 + Math.sin(this.legAngle2) * this.size * 0.2);
                 ctx.stroke();
             }
 
@@ -213,15 +217,11 @@
     });
 
     function animate() {
-        // 双重清除，100% 无残影
         ctx.clearRect(0, 0, width, height);
         ctx.fillStyle = '#87CEEB';
         ctx.fillRect(0, 0, width, height);
 
-        // 画樱花
         sakuras.forEach(s => { s.update(); s.draw(); });
-
-        // 画小人（带动画）
         people.forEach(p => { p.update(); p.draw(); });
 
         requestAnimationFrame(animate);
@@ -234,7 +234,6 @@
         sakuras.forEach(s => s.reset());
     });
 
-    // 音乐
     document.body.addEventListener('click', () => {
         document.getElementById('bgm').play().catch(() => {});
     }, { once: true });
